--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -81,5 +81,8 @@
             <div class="imagen-grid Chiquita"><img src="img/img3.png" alt="imagen7"></div>
         </div>
     </div>
+    <footer>
+        kasjdhkas
+    </footer>
 </body>
 </html>
